@@ -1,12 +1,12 @@
 package com.codecampus.post.service;
 
 
+import com.codecampus.post.dto.common.ApiResponse;
 import com.codecampus.post.dto.common.PageResponse;
 import com.codecampus.post.dto.request.AddFileDocumentDto;
 import com.codecampus.post.dto.request.PostRequestDto;
-import com.codecampus.post.dto.response.AddFileResponseDto;
-import com.codecampus.post.dto.response.FileResult;
 import com.codecampus.post.dto.response.PostResponseDto;
+import com.codecampus.post.dto.response.file.UploadedFileResponse;
 import com.codecampus.post.entity.Post;
 import com.codecampus.post.exception.AppException;
 import com.codecampus.post.exception.ErrorCode;
@@ -16,13 +16,10 @@ import com.codecampus.post.mapper.PostMapper;
 import com.codecampus.post.repository.PostRepository;
 import com.codecampus.post.repository.httpClient.FileServiceClient;
 import com.codecampus.post.utils.PageResponseUtils;
-import java.io.IOException;
-import java.io.InputStream;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import javax.imageio.ImageIO;
 import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
@@ -32,7 +29,6 @@ import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
-import org.springframework.web.multipart.MultipartFile;
 
 @Service
 @RequiredArgsConstructor
@@ -113,26 +109,21 @@ public class PostService {
     if (fileDoc != null && fileDoc.getFile() != null &&
         !fileDoc.getFile().isEmpty()) {
 
-      MultipartFile file = fileDoc.getFile();
-
-      // Kiểm tra file được tải lên có phải ảnh thật hay không
-      if (!isRealImage(file)) {
-        throw new AppException(ErrorCode.INVALID_FILE_TYPE);
-      }
-
-      // Upload file sau khi xác thực
-      AddFileResponseDto response = fileServiceClient.uploadFile(fileDoc);
+      // Upload file
+      var api = fileServiceClient.uploadFile(fileDoc);
 
       // Nếu API C# trả result là String URL
-      fileUrls = Optional.ofNullable(response)
-          .map(AddFileResponseDto::getResult)
-          .map(FileResult::getUrl)
-          .map(List::of)
-          .orElse(Collections.emptyList());
+      String uploadedUrl = Optional.ofNullable(api)
+          .map(com.codecampus.post.dto.common.ApiResponse::getResult)
+          .map(UploadedFileResponse::getUrl)
+          .orElse(null);
+
+      fileUrls =
+          uploadedUrl != null ? List.of(uploadedUrl) : Collections.emptyList();
     }
 
     Post post = postMapper.toPostFromPostRequestDto(postRequestDto);
-    post.setImagesUrls(fileUrls);
+    post.setFileUrls(fileUrls);
     post.setUserId(userId);
 
     postRepository.save(post);
@@ -153,46 +144,29 @@ public class PostService {
     }
 
     // Danh sách ảnh sau khi chỉnh sửa
-    List<String> updatedImageUrls = new ArrayList<>();
-    List<String> existingImages =
-        Optional.ofNullable(existingPost.getImagesUrls())
-            .orElse(Collections.emptyList());
+    List<String> updatedFileUrls = new ArrayList<>(
+        Optional.ofNullable(existingPost.getFileUrls())
+            .orElse(Collections.emptyList())
+    );
 
-    // 1. Giữ lại ảnh cũ mà người dùng vẫn muốn giữ
-    if (postRequestDto.getOldImagesUrls() != null &&
-        !postRequestDto.getOldImagesUrls().isEmpty()) {
-      updatedImageUrls.addAll(
-          existingPost.getImagesUrls().stream()
-              .filter(postRequestDto.getOldImagesUrls()::contains)
-              .toList()
-      );
-    }
-
-    // 2. Nếu có ảnh mới thì kiểm tra và upload
+    // Nếu có file mới thì upload và append
     if (postRequestDto.getFileDocument() != null &&
         postRequestDto.getFileDocument().getFile() != null &&
         !postRequestDto.getFileDocument().getFile().isEmpty()) {
 
-      MultipartFile file = postRequestDto.getFileDocument().getFile();
-      if (!isRealImage(file)) {
-        throw new AppException(ErrorCode.INVALID_FILE_TYPE);
-      }
+      var api = fileServiceClient
+          .uploadFile(postRequestDto.getFileDocument());
 
-      // Upload ảnh mới
-      AddFileResponseDto response = fileServiceClient.uploadFile(
-          postRequestDto.getFileDocument());
-      List<String> newFileUrls = Optional.ofNullable(response)
-          .map(AddFileResponseDto::getResult)
-          .map(FileResult::getUrl)
-          .map(List::of)
-          .orElse(Collections.emptyList());
-
-      updatedImageUrls.addAll(newFileUrls);
+      Optional.ofNullable(api)
+          .map(ApiResponse::getResult)
+          .map(UploadedFileResponse::getUrl)
+          .ifPresent(updatedFileUrls::add);
     }
 
-    // 3. Cập nhật các field khác
+    // Cập nhật các field đơn khác
     postMapper.updatePostRequestDtoToPost(postRequestDto, existingPost);
-    existingPost.setImagesUrls(updatedImageUrls);
+
+    existingPost.setFileUrls(updatedFileUrls);
     postRepository.save(existingPost);
   }
 
@@ -203,14 +177,6 @@ public class PostService {
         .orElseThrow(() -> new AppException(ErrorCode.POST_NOT_FOUND));
     post.markDeleted(deletedBy);
     postRepository.save(post);
-  }
-
-  public boolean isRealImage(MultipartFile file) {
-    try (InputStream input = file.getInputStream()) {
-      return ImageIO.read(input) != null;
-    } catch (IOException e) {
-      return false;
-    }
   }
 }
 
